force-app/main/default/objects/custom_create172__c/custom_create172__c.object-meta.xml
<CustomObject>
    <label>Custom created object172</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects172</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>