force-app/main/default/objects/custom_create172__c/fields/custom_create_172field526__c.field-meta.xml
<CustomField>
    <fullName>custom_create_172field526__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 172field526</label>
    <type>Checkbox</type>
</CustomField>