force-app/main/default/objects/custom_create172__c/fields/custom_create_172field574__c.field-meta.xml
<CustomField>
    <fullName>custom_create_172field574__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 172field574</label>
    <type>Checkbox</type>
</CustomField>